--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,18 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
+	<repositories>
+		<repository>
+			<id>MavenDemo</id>
+			<url>https://pkgs.dev.azure.com/Sipsoft-dk/sip-project/_packaging/sip-project/maven/v1</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 	<build>
 		<plugins>
 			<plugin>
