--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 	<repositories>
 		<repository>
 			<id>MavenDemo</id>
-			<url>https://pkgs.dev.azure.com/Sipsoft-dk/sip-project/_packaging/sip-project/maven/v1</url>
+			<url>https://pkgs.dev.azure.com/Sipsoft-dk/sip-project/_packaging/sip_feed/maven/v1</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
@@ -40,6 +40,12 @@
 			</snapshots>
 		</repository>
 	</repositories>
+	<distributionManagement>
+		<repository>
+			<id>MavenDemo</id>
+			<url>https://pkgs.dev.azure.com/Sipsoft-dk/sip-project/_packaging/sip_feed/maven/v1</url>
+		</repository>
+	</distributionManagement>
 	<build>
 		<plugins>
 			<plugin>
